fix no courses text alignment

--- a/ClientModule/src/app/components/main/personal/personal.component.css
+++ b/ClientModule/src/app/components/main/personal/personal.component.css
@@ -203,6 +203,11 @@ mat-sidenav {
   text-align: center;
 }
 
+.no-courses-desc-text {
+  width: 600px;
+  margin: auto;
+}
+
 .loader-container {
   display: flex;
   flex-direction: column;
